Adding parameter to add additional modules to optimized JDK