@@ -7,6 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+## [v1.2.0] - 2024-06-01
+### Added
+- Additional modules that aren't fetched by jdeps can be added with `--add-modules module_1,...,module_n`
+
 ## [v1.1.0] - 2024-05-31
 ### Changed
 - Improved macOS runnable execution in the tar.gz file. The executable file is now placed inside a folder named `application.app`, allowing it to be launched with a double-click.
@@ -24,6 +28,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - See origin repository: https://github.com/guziks/warp4j
 
 [unreleased]: https://github.com/kirbylink/warp4j/compare/master...HEAD
-[v1.1.0]: https://github.com/kirbylink//warp4j/compare/v1.0.0...v1.1.0
-[v1.0.0]: https://github.com/kirbylink//warp4j/compare/stable...v1.0.0
+[v1.2.0]: https://github.com/kirbylink/warp4j/compare/v1.1.0...v1.2.0
+[v1.1.0]: https://github.com/kirbylink/warp4j/compare/v1.0.0...v1.1.0
+[v1.0.0]: https://github.com/kirbylink/warp4j/compare/stable...v1.0.0
 [origin warp4j]: https://github.com/guziks/warp4j
